Add --enable-preview to tests that redefine Records